# url-shortener

./: .gitignore  README
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.moon/: workspace.yml
backend/: .env.development  .gitignore  README.md  moon.yml  pyproject.toml
backend/app/: service.py
backend/app/core/: setting.py
backend/app/crud/: crud.py  short_url_crud.py  url_crud.py  user_activity_history_crud.py  user_crud.py
backend/app/db/: database.py
backend/app/models/: service.py  short_url_model.py  url_model.py  user_activity_history_model.py  user_model.py
backend/app/routes/: service.py  short_url_route.py  url.py  url_route.py  user_activity_history_route.py  user_route.py
backend/app/schemas/: service.py  short_url_schema.py  url_schema.py  user_activity_history_schema.py  user_schema.py
backend/app/utils/: base62.py
frontend/: .env  .env.production  README.md  moon.yml  package-lock.json
frontend/src/actions/: short-url.ts  shorten.ts  user.ts
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/(pages)/auth/: layout.tsx  page.tsx
frontend/src/app/(pages)/short-url/: layout.tsx  (+1 more)
frontend/src/components/: CreateShortUrlForm.tsx  CreateUserForm.tsx  CreateUserLoginForm.tsx  DeleteUserForm.tsx  ShortUrlForm.tsx  ShortenUrlForm.tsx  UpdateUserForm.tsx  UserLoginForm.tsx
frontend/src/types/: error.ts  response.ts
frontend/src/utils/: utility.ts
frontend_old/: .gitignore  package.json
frontend_old/src/app/: layout.tsx
frontend_old/src/app/service/: page.tsx
(+11 files in other folders)
