[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bryan <dev.pyoungwoo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
toml = "^0.10.2"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
uuid = "^1.30"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
cryptography = "^45.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
