[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bryan <dev.pyoungwoo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = {extras = ["email"], version = "^2.7.3"}
toml = "^0.10.2"
uuid = "^1.30"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
cryptography = "^42.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
